--- a/test.html
+++ b/test.html
@@ -1,16 +1,13 @@
-<div class="flex items-center justify-center py-48">
-  <div class="flex flex-col">
-    <div class="flex flex-col items-center">
-      <div class="text-indigo-400 font-bold text-7xl py-10">
-        500!
-      </div>
-      <div class="text-white font-bold text-3xl xl:text-7xl lg:text-6xl md:text-5xl mt-10">
-        Error en el servidor
-      </div>
-
-      <div class="text-gray-300 font-medium text-sm md:text-xl lg:text-2xl mt-8">
-        Se presentó un error en el servidor al procesar tu solicitud.
-      </div>
-    </div>
-  </div>
-</div>
+<form class="flex items-center justify-between flex-1 w-full">
+  <input name="title" value={item.Title}
+  class={"border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full px-2.5 py-1.5",
+          templ.KV("bg-emerald-200", item.Completed),
+          templ.KV("bg-indigo-50", !item.Completed)
+        }/>
+  <button class="text-blue-500 hover:text-blue-700">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+      stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+    </svg>
+  </button>
+</form>
