Implemented chi instead of echo
Redesigned the hole app to use chi instead of echo because of bad compatibility with std lib implemented better middleware passing translations and decoder in the context

--- a/index.html
+++ b/index.html
@@ -1,47 +1,38 @@
-{{ define "main" }}
-<!DOCTYPE html>
-<html class="h-full bg-gray-900" lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HTMX Go</title>
-	<link href="/static/index.css" rel="stylesheet" />
-	<script src="/static/htmx.js" type="text/javascript"></script>
-</head>
-<body class="h-full">
-	<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-			<img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
-			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">Iniciar Sesión</h2>
-		</div>
-	
-		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-			<form class="space-y-6" action="#" method="POST">
-				<div>
-					<label for="email" class="block text-sm font-medium leading-6 text-white">Email</label>
-					<div class="mt-2">
-						<input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6">
-					</div>
-				</div>
-	
-				<div>
-					<div class="flex items-center justify-between">
-						<label for="password" class="block text-sm font-medium leading-6 text-white">Contraseña</label>
-						<div class="text-sm">
-							<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">Olvidaste tu contraseña?</a>
-						</div>
-					</div>
-					<div class="mt-2">
-						<input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6">
-					</div>
-				</div>
-	
-				<div>
-					<button type="submit" class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">Iniciar Sesión</button>
-				</div>
-			</form>
-		</div>
+<div class="flex flex-col justify-center px-6 py-12 lg:px-8 mt-20">
+	<div class="sm:mx-auto sm:w-full sm:max-w-sm">
+		<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">{l.Translate("Iniciar Sesión")}
+		</h2>
 	</div>
-</body>
-</html>
-{{ end }}
+
+	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+		<form class="space-y-6" action="#" method="POST">
+			<div>
+				<label for="email" class="block text-sm font-medium leading-6 text-white">{l.Translate("Email")}</label>
+				<div class="mt-2">
+					<input id="email" name="email" type="email" autocomplete="email" required
+						class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
+				</div>
+			</div>
+			<div>
+				<div class="flex items-center justify-between">
+					<label for="password"
+						class="block text-sm font-medium leading-6 text-white">{l.Translate("Contraseña")}</label>
+					<div class="text-sm">
+						<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">{l.Translate("Olvidaste tu
+							contraseña?")}</a>
+					</div>
+				</div>
+				<div class="mt-2">
+					<input id="password" name="password" type="password" autocomplete="current-password" required
+						class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
+				</div>
+			</div>
+
+			<div>
+				<button type="submit"
+					class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">{l.Translate("Iniciar
+					Sesión")}</button>
+			</div>
+		</form>
+	</div>
+</div>
