--- a/test.html
+++ b/test.html
@@ -1,3 +1,5 @@
-<div class="flex justify-between gap-x-6 px-20">
-
-</div>
+<a href="#" hx-post="/logout" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+	hx-headers={fmt.Sprintf("{\"X-CSRF-Token\": \"%s\"}", ctx.Value("gorilla.csrf.Token").(string))}
+	id="user-menu-item-2">
+	Sign out
+</a>
