Feature: Update project structure
Se actualiza la estructura del proyecto

--- a/index.html
+++ b/index.html
@@ -1,38 +1,168 @@
-<div class="flex flex-col justify-center px-6 py-12 lg:px-8 mt-20">
-	<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-		<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">{l.Translate("Iniciar Sesión")}
-		</h2>
-	</div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8"/>
+</head>
+<body>
+	<div style="
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif;
+  color: #000;
+  background-color: #fff;
+">  
+  <div  
+    style="
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    ">
+    <div>
+      <img 
+      src="https://a27dda81c8.imgdist.com/public/users/Integrators/BeeProAgency/1100853_1086281/1_t1jszq.png" 
+      alt="Imagen Cabecera" 
+      style="
+      width: 180px;
+      max-width: 100%;
+      height: auto;
+      "
+      >
+    </div>
 
-	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-		<form class="space-y-6" action="#" method="POST">
-			<div>
-				<label for="email" class="block text-sm font-medium leading-6 text-white">{l.Translate("Email")}</label>
-				<div class="mt-2">
-					<input id="email" name="email" type="email" autocomplete="email" required
-						class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
-				</div>
-			</div>
-			<div>
-				<div class="flex items-center justify-between">
-					<label for="password"
-						class="block text-sm font-medium leading-6 text-white">{l.Translate("Contraseña")}</label>
-					<div class="text-sm">
-						<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">{l.Translate("Olvidaste tu
-							contraseña?")}</a>
-					</div>
-				</div>
-				<div class="mt-2">
-					<input id="password" name="password" type="password" autocomplete="current-password" required
-						class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
-				</div>
-			</div>
+    <div>
+      <h3>Quito,</h3>
+    </div>
 
-			<div>
-				<button type="submit"
-					class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">{l.Translate("Iniciar
-					Sesión")}</button>
-			</div>
-		</form>
-	</div>
+    <div 
+    style="margin: 5px 0;"
+    >
+      <p><strong>Producto:  </strong>{6}</p>
+      <p><strong>Expediente:  </strong>{4}</p>
+      <p><strong>Proveedor:  </strong>{1}</p>
+      <p><strong>Ciudad prestación servicio:  </strong>  XXXXX</p>
+    </div>
+
+    <div 
+    style="margin: 5px 0;"
+    >
+      <p>Presente. -</p>
+      <p>Por medio del presente autorizamos la coordinación de servicio médico respectiva al Sr(a) , CLIENTE  <strong>{2} {8} {9}</strong></p>
+    </div>
+
+    <div>
+      <article>
+        <div >
+          <table
+            style="
+            margin-top: 20px;
+            font-size: 0.875rem;
+            empty-cells: show;
+            border: 2px solid rgb(209, 209, 209);
+            border-radius: 5px;
+            "
+          >
+            <tbody>
+              <tr>
+                <th 
+                style="
+                background: rgb(247, 246, 243);
+                color: black;
+                font-weight: 500; 
+                padding: 10px;  
+                text-wrap: wrap;              
+                ">
+                  <strong>Tipo de Atención</strong>
+                </th>
+                <td >
+                  <strong>{3}</strong>  
+                </td>
+              </tr>
+              <tr>
+                <th style="
+                background: rgb(247, 246, 243);
+                color: black;
+                font-weight: 500;
+                padding: 10px;    
+                text-wrap: wrap;             
+                ">
+                  <strong>Fecha de Cita</strong></th>
+                  <td >
+                    <strong>{7}</strong>  
+                  </td>
+                </tr>
+                <tr>
+                  <th style="
+                  background: rgb(247, 246, 243);
+                  color: black;
+                  font-weight: 500; 
+                  padding: 10px;  
+                  text-wrap: wrap;              
+                  ">
+                    <strong>Coordinado con</strong>
+                  </th>
+                  <td  >
+                    <strong>XXXXX</strong>
+                  </td>
+                </tr>
+                <tr >
+                  <th  style="
+                  background: rgb(247, 246, 243);
+                  color: black;
+                  font-weight: 500; 
+                  padding: 10px;
+                  text-wrap: wrap;               
+                  ">
+                    <strong>Autorizado por</strong>
+                  </th>
+                  <td >
+                    <strong>{5}</strong>
+                  </td>
+                </tr>
+                <tr >
+                  <th style="
+                  background: rgb(247, 246, 243);
+                  color: black;
+                  font-weight: 500; 
+                  padding: 10px;
+                  text-wrap: wrap;               
+                  ">
+                    <strong>Valor</strong>
+                  </th>
+                  <td  >
+                    <strong>$XXXXX</strong>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            
+          </div>
+        </article>
+    </div>
+
+    <div style="height: 25px; line-height: 25px; font-size: 1px;">&#8202;</div>
+
+    <div style=" 
+    color: #000;
+    font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif;
+    font-size: 15px;
+    line-height: 120%;
+    text-align: left;
+    ">
+      <p><strong>Se recuerda que:</strong></p>    
+        <p>
+            Se debe emitir la factura por el valor del servicio prestado con el respectivo descuento a nombre de Coris del Ecuador del 1ero al 5 de cada mes.
+        </p>    
+        <p>
+            Únicamente se presta una consulta por evento (Diagnóstico) / *Al cubrir eventos por enfermedad se debe excluir expresamente el chequeo o consulta de control.
+        </p>    
+        <p>
+            De haber alguna inquietud o novedad por favor comuníquese a nuestra central de proveedores al 02-2973127, de antemano muchas gracias por su colaboración.
+        </p>    
+        <p><strong>Atentamente,</strong></p>
+        <br>    
+        <p><strong>CORIS DEL ECUADOR</strong></p>
+    </div>
+  </div>
 </div>
+</body>
+</html>
